--- a/index.html
+++ b/index.html
@@ -13,10 +13,22 @@
 </head>
 <body>
 <div id="wrapper">
-<p>Hello World</p>
+<header class="gHead">
+<h1>HTMLファイ部 - KAYAC</h1>
+<p>HTMLファイ部にようこそ</p>
+<!-- /.gHead --></header>
+<div class="main">
+<p>HTMLファイ部のドキュメントや、便利なライブラリなどを載せていきます。</p>
 
+<!-- /.main --></div>
+<nav class="gNav">
+<h2>メニュー</h2>
+<p>随時追加予定</p>
+<ul class="navMenu">
+<!-- /.navMenu --></ul>
+<!-- /.gNav --></nav>
 
-</div>
+<!-- /#wrapper --></div>
 <noscript><p id="msgNoscript">当サイトは、ブラウザのJavaScript設定を有効にしてご覧ください。</p></noscript>
 </body>
 </html>
